# war-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  maskfile.md  treefmt.nix
benches/: card_operations.rs  game_simulation.rs  ring_buffer_perf.rs
src/: cards.rs  lib.rs  main.rs  ring_buffer.rs
