[package]
name = "war-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "card_operations"
harness = false

[[bench]]
name = "ring_buffer_perf"
harness = false

[[bench]]
name = "game_simulation"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
